Fixed RTL <details> mis-alignment
<details> didn't align properly, clear fixed it.

--- a/src/grids/sass/includes/_form.scss
+++ b/src/grids/sass/includes/_form.scss
@@ -158,7 +158,7 @@
 			label {
 				text-align: left;
 			}
-			br {
+			br, details {
 				clear:both;
 			}
 		}
